@startuml vision-id-class
class GUI {
    void chooseAnalyzer(type: int)
    image generateFrame(image)
    void addFace(image, name: str)
}

class Analyzer {
    {static} KNOWN_FACES_DIR: str
    image analyzeFrame(image)
}

class Draw {
    image drawBorder(image, tl: tuple, br: tuple)
}

class ImageAnalyzer
class VideoAnalyzer
class LiveAnalyzer

GUI o-- ImageAnalyzer
GUI o-- VideoAnalyzer
GUI o-- LiveAnalyzer

Analyzer o- Draw

ImageAnalyzer o-- Analyzer
VideoAnalyzer o-- Analyzer
LiveAnalyzer o-- Analyzer

@enduml